--- a/src/views/products.hbs
+++ b/src/views/products.hbs
@@ -23,6 +23,7 @@
   <button onClick="submitForm()">Submit</button>
   <hr />
 </div>
+<button onClick="purchase()">Purchase</button>
 <table>
   <thead>
     <tr>
