--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -4,10 +4,9 @@
     <label>Email</label>
     <input name="email" />
     <br />
+    <br />
     <label>Contraseña</label>
-    <input name="password" />
-    <input type="submit" />
-  </form>
+    <input name="password">
   <p>¿No estás registrado? <a href="/users/register">Regístrate aquí</a></p>
   <p>¿Tienes cuenta de Github?
     <a href="/github/login">Haz login por Github</a></p>
