--- a/src/views/login.hbs
+++ b/src/views/login.hbs
@@ -1,12 +1,47 @@
-<div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light mx-2">
+  <a class="navbar-brand" href="#">Product Manager</a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/users/login">Login</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/users/register">Register</a>
+      </li>
+    </ul>
+  </div>
+</nav>
+
+<div
+  class="w-100 h-100 d-flex flex-column align-items-center justify-content-center"
+>
   <h1>Login</h1>
   <form id="loginForm">
-    <label>Email</label>
-    <input name="email" />
+    <div class="form-group">
+
+      <label>Email</label>
+      <input class="form-control" name="email" placeholder="hello@world.com" />
+    </div>
     <br />
+    <div class="form-group">
+
+      <label>Contraseña</label>
+      <input class="form-control" type="password" name="password" placeholder="********" />
+    </div>
     <br />
-    <label>Contraseña</label>
-    <input name="password">
+    <input type="submit" class="btn btn-primary" />
+  </form>
   <p>¿No estás registrado? <a href="/users/register">Regístrate aquí</a></p>
   <p>¿Tienes cuenta de Github?
     <a href="/github/login">Haz login por Github</a></p>
