--- a/src/views/register.hbs
+++ b/src/views/register.hbs
@@ -1,24 +1,64 @@
-<div>
-    <h1>Registro</h1>
-    <form id="registerForm">
+<nav class="navbar navbar-expand-lg navbar-light bg-light mx-2">
+  <a class="navbar-brand" href="#">Product Manager</a>
+  <button
+    class="navbar-toggler"
+    type="button"
+    data-toggle="collapse"
+    data-target="#navbarNav"
+    aria-controls="navbarNav"
+    aria-expanded="false"
+    aria-label="Toggle navigation"
+  >
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link" href="/users/login">Login</a>
+      </li>
+      <li class="nav-item active">
+        <a class="nav-link" href="/users/register">Register</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
+<div
+  class="w-100 h-100 d-flex flex-column align-items-center justify-content-center"
+>
+  <h1>Registro</h1>
+  <form id="registerForm">
+    <div class="form-group d-flex gap-4">
+      <div class="d-flex flex-column">
         <label>Nombre</label>
-        <input name="first_name">
-        <br/>
+        <input name="first_name" class="form-control" placeholder="John" />
+        <br />
+      </div>
+      <div class="d-flex flex-column">
         <label>Apellido</label>
-        <input name="last_name">
-        <br/>
-        <label>Email</label>
-        <input name="email">
-        <br/>
-        <label>Edad</label>
-        <input name="age">
-        <br/>
-        <label>Contraseña</label>
-        <input name="password">
+        <input name="last_name" class="form-control" placeholder="Doe" />
+        <br />
+      </div>
+    </div>
+    <label>Email</label>
+    <input name="email" class="form-control" placeholder="john@doe.com" />
+<br>
+    <label>Contraseña</label>
+    <input
+      name="password"
+      class="form-control"
+      placeholder="Please use a secure password"
+    />
 
-        <input type="submit">
-    </form>
-    <p>¿Ya tienes una cuenta? <a href="/users/login">Ingresa aquí</a></p>
+    <br />
+    <div class="form-group">
+      <label>Edad</label>
+      <input name="age" class="form-control" />
+      <br />
+
+    </div>
+    <input type="submit" class="btn btn-primary" />
+  </form>
+  <p>¿Ya tienes una cuenta? <a href="/users/login">Ingresa aquí</a></p>
 </div>
 <script src="/js/register.js"></script>
