--- a/src/views/products.hbs
+++ b/src/views/products.hbs
@@ -20,8 +20,13 @@
         <a class="nav-link" href="/cart">Cart</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="/profile">Profile</a>
+        <a class="nav-link" href="/users/">Profile</a>
       </li>
+      {{#if isAdmin}}
+        <li class="nav-item">
+          <a class="nav-link" href="/admin">Admin Panel</a>
+        </li>
+      {{/if}}
     </ul>
   </div>
 </nav>
